<resources>
    <string name="app_name">Disp Moviles</string>
    <string name="Titulo">Aplicativo de dispositivos móviles</string>
    <string name="Saludo">¡Hola! Es bueno verte nuevamente</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Mensaje">O conéctese usando las redes sociales</string>
    <string name="Olvido">¿Olvidó su contraseña?</string>
    <string name="Registrese">Regístrese</string>
    <string name="Twitter">Twitter</string>
    <string name="Facebook">Facebook</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_chat_gpt">Chat GPT</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulo">Pedidos Online</string>
    <string name="saludo">¡Hola! Es bueno verte nuevamente</string>
    <string name="email">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="botonIngresar">Ingresar</string>
    <string name="txtDesvio">¡Síguenos en nuestras rede sociales!</string>
    <string name="remember">¿Sin cuenta?</string>
    <string name="SingUp">Sing Up</string>

    <string name="app_name_pantalla">Fast and Delicious Food</string>
    <string name="app_binding_name">Gaming Services</string>
    <string name="buttonSearch">Search</string>
    <string name="pedidosOnline">Pedidos Online</string>
    <string name="mensaje_ejPractico">¡Hola! Es bueno verte nuevamente</string>
    <string name="correoEjemplo">example@email.com</string>
    <string name="txt_fragment">Personajes</string>
    <string name="txt_fragment2">Segundo Fragment</string>
    <string name="txt_fragment3">Tercer Fragment</string>
    <string name="ejecutar_x3">Ejecutar x3</string>
    <string name="ejecutar_x6">Ejecutar x6</string>
    <string name="autent_biometrca">Autentificación Biometrca</string>
    <string name="txtfrag">Recarga para ver los porsonajes</string>
    <string name="back">Back</string>
    <string name="getout">Salir</string>
</resources>